# toulen

./: .gitignore  README.md  package.json  svelte.config.js  tailwind.config.cjs  tsconfig.json
.github/actions/: build.yml
.github/workflows/: build.yml
src/: app.css  app.html
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/bindings/: LeaderboardPlayer.ts  LoginStatus.ts  Player.ts  Prices.ts  Stats.ts  TweakData.ts
src-tauri/icons/: icon.icns
src-tauri/src/: api.rs  inits.rs  lib.rs  main.rs  synced_state.rs  tweak_data.rs
src/lib/: api.ts  constants.ts  stores.ts  util.ts
src/lib/components/: Login.svelte  Money.svelte  Tooltip.svelte  Upgrade.svelte  UpgradeMenu.svelte
src/lib/components/icons/: MenuIcon.svelte  SettingsIcon.svelte  ShopIcon.svelte
src/lib/components/logic/: AutoSniff.svelte  Dech.svelte  Save.svelte
src/lib/fns/: auto_sniff.ts  sniff.ts
src/routes/: +layout.svelte  +page.svelte
src/routes/game/: +page.svelte
src/routes/leaderboards/: +page.svelte
src/routes/menu/: +layout.svelte
src/routes/menu/leaderboards/: +page.svelte
src/routes/menu/stats/: +page.svelte
src/routes/menu/svinov/: +page.svelte
src/routes/svinov/: +page.svelte
